# sandbox

./: Cargo.toml
assets/: map.ron
assets/tiles/: stones.manifest.ron
examples/: convert_normal.rs  joints.rs  movement.rs  nonogram.rs  portals.rs  sokoban.rs  soma.rs  tiles.rs  verlet.rs  voxel.rs
src/: aabb_grid.rs  file_picker.rs  grid.rs  input.rs  lib.rs  lifetime.rs  util.rs
src/editor/: mod.rs  palette.rs  render.rs  tiles.rs
src/editor/tools/: area.rs  erase.rs  mod.rs  paint.rs  platform.rs  pole.rs  slope.rs  util.rs
src/editor/ui/: menu.rs  mod.rs  toolbar.rs
src/entity/: holdable.rs  mod.rs  pebble.rs  player.rs
src/level/: layer.rs  mod.rs  placement.rs  serialization.rs  tile.rs
src/nono/: mod.rs
src/phys/: mod.rs  movement.rs  spatial.rs  terrain.rs  verlet.rs
src/sokoban/: history.rs  mod.rs  player.rs
src/ui/: menu.rs  mod.rs
