[package]
name = "sandbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.9.1", features = ["dynamic"] }
bevy_rapier2d = { version = "0.20.0" }
bevy-inspector-egui = "0.16"
rand = "0.8.5"
leafwing-input-manager = "0.8"
bevy_pancam = "0.7"
bevy_prototype_debug_lines = "0.9"
bevy_ecs_tilemap = "0.9"
bevy_prototype_lyon = "0.7.2"
bevy_flycam = "0.9.0"
lazy_static = "1.4.0"
bevy_tweening = "0.6"

[profile.dev]
opt-level = 1
incremental = true

[profile.dev.package."*"]
opt-level = 3
