[package]
name = "sandbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.11.2" , features = ["dynamic_linking"] }
bevy-inspector-egui = "0.19"
rand = "0.8.5"
leafwing-input-manager = "0.10"
bevy_pancam = "0.9"
bevy_prototype_debug_lines = "0.11"
bevy_ecs_tilemap = "0.11"
bevy_prototype_lyon = "0.9"
lazy_static = "1.4.0"
serde = "1.0"
ron = "0.8"
bevy_xpbd_2d = {git = "https://github.com/Jondolf/bevy_xpbd", branch = "main", features = ["debug-plugin"]}


[profile.dev]
opt-level = 1
incremental = true

[profile.dev.package."*"]
opt-level = 3
