[package]
name = "sandbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.11.2" , features = ["dynamic_linking"] }
bevy-inspector-egui = "0.19"
rand = "0.8.5"
leafwing-input-manager = "0.10"
bevy_pancam = "0.9"
bevy_prototype_debug_lines = "0.11"
#bevy_ecs_tilemap = "0.11"
bevy_ecs_tilemap = {git = "https://github.com/StarArawn/bevy_ecs_tilemap", branch = "main"}
bevy_prototype_lyon = "0.9"
lazy_static = "1.4.0"
serde = "1.0"
ron = "0.8"
bevy_xpbd_2d = {git = "https://github.com/Jondolf/bevy_xpbd", branch = "main", features = ["debug-plugin"]}
egui = "0.22.0"
epaint = "0.22.0"
bevy_egui = "0.21.0"
bevy_polyline = "0.7.0"
rfd = "0.12.0"
futures-lite = "1.13.0"
anyhow = "1.0"

[profile.dev]
opt-level = 1
incremental = true

[profile.dev.package."*"]
opt-level = 3
